# pipewire-audio-switcher

./: .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
cmake/: external_libs.cmake  linux-x86-clangd-toolchain.cmake  options.cmake  sources.cmake
scripts/: build.sh  run_benchmarks.sh  run_tests.sh
sources/config/: device_config.hh
sources/filesystem/: file_reader.cc  file_reader.hh
sources/parser/: toml_parser.cc  toml_parser.hh
sources/process/: process_executor.cc  process_executor.hh
sources/utility/: process_executor.cc  process_executor.hh
targets/cli/: CMakeLists.txt
targets/cli/benchmarks/: CMakeLists.txt
targets/cli/benchmarks/cmake/: external_libs.cmake  sources.cmake
targets/cli/benchmarks/sources/benchmarks/commands/: get_sink_command_benchmark.cc
targets/cli/benchmarks/sources/benchmarks/controller/: menu_controller_benchmark.cc
targets/cli/benchmarks/sources/benchmarks/parsers/: argument_parser_benchmark.cc
targets/cli/cmake/: external_libs.cmake  sources.cmake
targets/cli/sources/: main.cc
targets/cli/sources/commands/: cycle_sink_command.cc  cycle_sink_command.hh  get_sink_command.cc  get_sink_command.hh
targets/cli/sources/controller/: menu_controller.cc  menu_controller.hh
targets/cli/sources/data/: input_parameters.hh
targets/cli/sources/options/: base_option.cc  base_option.hh  command_option.cc  command_option.hh  help_option.cc  help_option.hh
targets/cli/sources/options/data/: command_type.hh  input_parameters.hh
targets/cli/sources/options/interfaces/: ioption.hh
targets/cli/sources/parser/: argument_parser.cc  argument_parser.hh
targets/cli/tests/: CMakeLists.txt
targets/cli/tests/cmake/: sources.cmake
targets/cli/tests/sources/tests/commands/: cycle_sink_command_test.cc  get_sink_command_test.cc
targets/cli/tests/sources/tests/controller/: menu_controller_test.cc
targets/cli/tests/sources/tests/options/: command_option_test.cc  help_option_test.cc
targets/cli/tests/sources/tests/parser/: argument_parser_test.cc
targets/core/: CMakeLists.txt
targets/core/benchmarks/: CMakeLists.txt
targets/core/benchmarks/cmake/: sources.cmake
targets/core/benchmarks/sources/benchmarks/adapter/: wpctl_adapter_benchmark.cc
targets/core/benchmarks/sources/benchmarks/filesystem/: file_reader_benchmark.cc
targets/core/benchmarks/sources/benchmarks/parsers/: toml_parser_benchmark.cc
targets/core/benchmarks/sources/benchmarks/process/: process_executor_benchmark.cc
targets/core/benchmarks/sources/utility/: temp_file.cc  temp_file.hh
targets/core/cmake/: external_libs.cmake  sources.cmake
targets/core/includes/pas-core/adapter/: wpctl_adapter.hh
targets/core/includes/pas-core/adapter/data/: sink.hh
targets/core/includes/pas-core/adapter/interfaces/: iwpctl_adapter.hh
targets/core/includes/pas-core/cli/: input_parameters.hh
targets/core/includes/pas-core/command/data/: command_type.hh
targets/core/includes/pas-core/config/: configuration.hh  device.hh  device_config.hh
targets/core/includes/pas-core/filesystem/: file_reader.hh
targets/core/includes/pas-core/parser/: cli_parser.hh  toml_parser.hh
targets/core/includes/pas-core/process/: process_executor.hh
targets/core/includes/pas-core/process/interfaces/: iprocess_executor.hh
targets/core/includes/pas-core/utility/: error.hh
targets/core/sources/adapter/: wpctl_adapter.cc
targets/core/sources/filesystem/: file_reader.cc
targets/core/sources/parser/: toml_parser.cc
targets/core/sources/process/: process_executor.cc
targets/core/tests/: CMakeLists.txt
targets/core/tests/cmake/: sources.cmake
targets/core/tests/sources/tests/adapter/: wpctl_adapter_test.cc
targets/core/tests/sources/tests/filesystem/: file_reader_test.cc
targets/core/tests/sources/tests/parser/: toml_parser_test.cc
targets/core/tests/sources/tests/process/: process_executor_test.cc
targets/core/tests/sources/utility/: temp_file.cc  temp_file.hh
tests/: CMakeLists.txt
tests/cmake/: external_libs.cmake  sources.cmake
tests/sources/tests/filesystem/: file_reader_test.cc
tests/sources/tests/parser/: toml_parser_test.cc
tests/sources/tests/utility/: process_executor_test.cc
tests/sources/utility/: temp_file.cc  temp_file.hh
toolchains/: linux-x86-clangd-toolchain.cmake
